# data-steps

./: .gitignore  .pre-commit-config.yaml  HISTORY.md  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: ci.yaml  test.yaml
data_steps/: .single_frame.py.swp  __init__.py  export.py  single_frame.py
data_steps/tests/: .test_single_frame.py.swp  test_datasteps.py  test_export.py  test_single_frame.py  test_step.py  test_step_collection.py  test_steps.py
