[metadata]
name = data-steps 
version = file: data_steps/VERSION
description = Simple tool for data transformation 
author = Konrad Wölms
author_email = konrad.woelms@gmail.com 
license = MIT
url = https://github.com/KonradUdoHannes/data-steps

[options]
python_requires = >= 3.8
packages = data_steps 
include_package_data = true

[flake8]
max-line-length = 88
exclude = .ipynb_checkpoints
