[metadata]
name = data-steps
version = file: data_steps/VERSION
description = Simple tool for pandas data transformation
author = Konrad Wölms
author_email = konrad.woelms@gmail.com
license = MIT
url = https://github.com/KonradUdoHannes/data-steps

[options]
python_requires = >= 3.7
packages = data_steps
include_package_data = true

[options.extras_require]
test = pytest

[flake8]
max-line-length = 100
extend-ignore = E203, W503
inline-quotes = "
exclude =
    .ipynb_checkpoints
    venv
    .git
